# Embers-VK

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
embers/: CMakeLists.txt
embers/include/embers/: application.h  assertions.h  logger.h  platform_detection.h  primitives.h  test.h  window.h
embers/src/: application.cc  assertions.cc  datatypes.h  logger.cc  platform_detection.h  primitives.h  test.cc  window.cc  window.h
sandbox/: CMakeLists.txt
sandbox/src/: main.cc
wraithworks/: CMakeLists.txt
wraithworks/include/wraithworks/: logger.h  test.h
wraithworks/src/: datatypes.h  logger.cc  test.cc
