cmake_minimum_required(VERSION 3.23)
###
PROJECT(sandbox VERSION 0.0.1 LANGUAGES CXX)
SET(CMAKE_CXX_STANDARD 20)

INCLUDE(GNUInstallDirs)

FILE(GLOB_RECURSE SOURCES src/*)
FILE(GLOB_RECURSE HEADERS include/*)

ADD_EXECUTABLE(
        ${PROJECT_NAME}
        ${SOURCES}
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} embers)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE embers)