cmake_minimum_required(VERSION 3.23)
###
PROJECT(wraithworks VERSION 0.0.1 LANGUAGES CXX)
SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_C_VISIBILITY_PRESET hidden)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)

INCLUDE(GNUInstallDirs)

FILE(GLOB_RECURSE SOURCES src/*)
FILE(GLOB_RECURSE HEADERS include/*)

ADD_LIBRARY(
        ${PROJECT_NAME}
        SHARED
        ${SOURCES}
)

TARGET_INCLUDE_DIRECTORIES(
        ${PROJECT_NAME}
        PUBLIC
        $<INSTALL_INTERFACE:include>
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
        PRIVATE
)

TARGET_LINK_LIBRARIES(
        ${PROJECT_NAME}
        PUBLIC

        PRIVATE
)

